[gd_scene load_steps=2 format=3 uid="uid://c2otxb2jr1x6p"]

[ext_resource type="Script" path="res://menu_opciones.gd" id="1_pqufy"]

[node name="Menu_Opcion" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu_Opciones" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 51.0
offset_right = 452.0
offset_bottom = 263.0
script = ExtResource("1_pqufy")

[node name="LabelMaster" type="Label" parent="Menu_Opciones"]
layout_mode = 2
text = "Master"

[node name="master" type="HSlider" parent="Menu_Opciones/LabelMaster"]
layout_mode = 0
offset_left = -3.0
offset_top = 18.0
offset_right = 53.0
offset_bottom = 34.0

[node name="LabelMusic" type="Label" parent="Menu_Opciones"]
layout_mode = 2
text = "Musica"

[node name="music" type="HSlider" parent="Menu_Opciones/LabelMusic"]
layout_mode = 0
offset_left = -2.0
offset_top = 18.0
offset_right = 53.0
offset_bottom = 34.0

[node name="LabelEfect" type="Label" parent="Menu_Opciones"]
layout_mode = 2
text = "Efecto"

[node name="Efect" type="HSlider" parent="Menu_Opciones/LabelEfect"]
layout_mode = 2
offset_left = -3.0
offset_top = 13.0
offset_right = 54.0
offset_bottom = 29.0

[node name="volver" type="Button" parent="Menu_Opciones"]
layout_mode = 2
text = "volver"

[node name="fullscreen_button" type="Button" parent="Menu_Opciones"]
layout_mode = 2
text = "Pantalla completa"

[connection signal="value_changed" from="Menu_Opciones/LabelMaster/master" to="Menu_Opciones" method="_on_master_value_changed"]
[connection signal="value_changed" from="Menu_Opciones/LabelMusic/music" to="Menu_Opciones" method="_on_music_value_changed"]
[connection signal="value_changed" from="Menu_Opciones/LabelEfect/Efect" to="Menu_Opciones" method="_on_efect_value_changed"]
[connection signal="pressed" from="Menu_Opciones/volver" to="Menu_Opciones" method="_on_volver_pressed"]
[connection signal="pressed" from="Menu_Opciones/fullscreen_button" to="Menu_Opciones" method="_on_fullscreen_button_pressed"]
